<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="Read_State" Id="{69bb9099-da6d-4868-863f-d1ca42fcf096}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE Read_State :
(
	Triggerd := 0,
	DataWritten := 1,
	Done := 2
)UINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>